changement register et login

--- a/yacouba_site/auth_app/templates/register.html
+++ b/yacouba_site/auth_app/templates/register.html
@@ -9,13 +9,13 @@
     <div class="container">
         <div class="container">
             <div class="form">
-                <form method="post" action="{% url 'inscription' %}">
+                <form method="post" action="{% url 'register' %}">
                     {% csrf_token %}
                     <h1>Inscription</h1>
                     {{ form.as_p }}    
                     <button type="submit">S'inscrire</button>
                 </form>
-                <p class="link">Déjà inscrit ? <a href="{% url 'connexion' %}">Se connecter</a></p>
+                <p class="link">Déjà inscrit ? <a href="{% url 'login' %}">Se connecter</a></p>
             </div>
         </div>      
     </div>
